<resources>
    <string name="app_name">eCoffee</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_order_menu">order_menu</string>
    <string name="title_home">Home</string>
    <string name="title_checkout">Checkout</string>
    <string name="total">Total: €0.00</string>
    <string name="item_menu">Item Menu</string>
    <string name="back">back</string>
    <string name="checkout">checkout</string>
    <string name="frappe">Frappe</string>
    <string name="freddo_espresso">Freddo Espresso</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="preferences">Preferences</string>
    <string name="price">€1.90</string>
    <string name="logo">logo</string>
    <string name="cappucino">Cappuccino</string>
    <string name="verify_order">Verify Order</string>
    <string name="pay">Verify &amp; Pay</string>
    <string name="total2">Total: €3.80</string>

</resources>
