<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    android:theme="@android:style/Theme.Dialog"
    tools:context="com.team16.ecoffee.customizeDrinkActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back_button4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/back"
                    app:layout_constraintBottom_toTopOf="@+id/coffee_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

                <TextView
                    android:id="@+id/preferences"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/preferences"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="25dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/freddo_espresso"
                android:textColor="#2d140d"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/price"
                android:textColor="#383537"
                android:textSize="15sp" />
        </LinearLayout>


        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_marginRight="4dp"
            android:textColor="#383537"
            android:textSize="20sp"/>

                <ImageButton
                    android:id="@+id/remove"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/pressed_button_bg"
                    android:contentDescription="remove"
                    app:srcCompat="@drawable/ic_remove" />

                <ImageButton
                    android:id="@+id/add"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/pressed_button_bg"
                    app:srcCompat="@drawable/ic_add" />

    </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#8c746a"/>


    <LinearLayout
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Size"
            android:textSize="18sp"
            android:textColor="#443636"/>

        <ImageView
            android:id="@+id/img1"
            android:layout_marginLeft="100dp"
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_coffeecup"/>

        <ImageView
            android:id="@+id/img2"
            android:layout_marginLeft="20dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_coffee"/>

        <ImageView
            android:id="@+id/img3"
            android:layout_marginLeft="17dp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_fill_7"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8c746a"/>

    <LinearLayout
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#00000000"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sugar"
            android:textSize="18sp"
            android:textColor="#443636"/>

        <ImageView
            android:id="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            app:srcCompat="@drawable/ic_group_4_copy_4" />
        <ImageView
            android:id="@+id/img5"
            android:layout_marginLeft="35dp"
            android:layout_gravity="center"
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:srcCompat="@drawable/ic_group_4_copy"/>
        <ImageView
            android:id="@+id/img6"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/ic_group_4_copy_2"/>
        <ImageView
            android:id="@+id/img7"
            android:layout_marginLeft="21dp"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/ic_group_4_copy_3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8c746a"/>

    <LinearLayout
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#00000000"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Blend"
            android:textColor="#443636"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/blend_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:dropDownWidth="wrap_content"
            android:entries="@array/blends"
            android:spinnerMode="dropdown"
            android:theme = "@style/spinnerTheme"/>

    </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#8c746a"/>
            <LinearLayout
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total:"
                    android:textSize="30sp"
                    android:textColor="#8c746a"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/price"
                        android:textColor="#2d140d"
                        android:textSize="27sp" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add to cart"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:background="@drawable/rect1"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>